Revised URL System Added Alpha version of gallery mode

--- a/extension/intro.html
+++ b/extension/intro.html
@@ -46,7 +46,21 @@
 </head>
 <body>
 <div class="container">
-    <h1>TinkerCAD-Assistant Installed!</h1>
+    <h1>Thanks for using TinkerCAD-Assistant!</h1>
+    <h4>Changelog:</h4>
+    <ul>
+        <li>
+            Revised URL System for better tracking of current URL
+        </li>
+        <li>
+            ALPHA: Added Gallery mode. This feature will be expanded apon later :)
+        </li>
+        <li>
+            General bug fixes and various refactoring
+        </li>
+    </ul>
+
+
     <p>Hey there, Thanks for installing TinkerCAD-Assistant!
         This extension is developed by Ezra Golombek in his spare time!
         If you have any question, would like to contribute or anything in between,
