Fixed a bunch of bugs. This should be a stabl-ish version?

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-
     <style>
         body {
             font-family: "Arial", sans-serif;
@@ -14,6 +13,16 @@
             height: 100vh;
             background-color: #e0e0e0;
             margin: 0;
+        }
+
+        .selected {
+            font-weight: bold;
+            color: #4CAF50;
+        }
+
+        .unselected {
+            font-weight: normal;
+            color: #ffffff;
         }
 
         .settings-container {
@@ -48,6 +57,41 @@
             color: #ffffff;
         }
 
+        .dropdown {
+            position: relative;
+            width: 100%;
+            text-align: left;
+            background: #424242;
+            border-radius: 5px;
+            padding: 10px;
+            cursor: pointer;
+        }
+
+        .dropdown-content {
+
+            display: none;
+            position: absolute;
+            width: 100%;
+            background: #424242;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            margin-top: 5px;
+            padding: 10px;
+            z-index: 10;
+            overflow: clip;
+            overflow-y: scroll;
+            height: 4 0vh;
+        }
+
+        .dropdown-content div {
+            padding: 5px 0;
+            cursor: pointer;
+        }
+
+        .dropdown.open .dropdown-content {
+            display: block;
+        }
+
         .save-btn {
             margin-top: 20px;
             padding: 12px;
@@ -63,26 +107,53 @@
         .save-btn:hover {
             background: #0056b3;
         }
+
+        .speed-slider {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 5px;
+        }
     </style>
+    <script src="script.js"></script>
 </head>
 <body>
 <div class="settings-container">
-    <h2>⚙️ TinkerCAD Settings</h2>
+    <h2>⚙️ TinkerCAD Assistant Settings</h2>
 
-    <label for="theme">🎨 Theme:</label>
-    <select id="theme">
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-    </select>
+    <!--    <label for="theme">🎨 Theme:</label>-->
+    <!--    <select id="theme">-->
+    <!--        <option value="light">Light</option>-->
+    <!--        <option value="dark">Dark</option>-->
+    <!--    </select>-->
 
-    <label for="notifications">🔔 Enable Notifications:</label>
-    <input type="checkbox" id="notifications">
+    <label>🛠️ Print classes</label>
+    <div class="dropdown">
+        <div id="selected-features">Select Features ▼</div>
+        <div class="dropdown-content selection">
+            <div class="feature unselected" name="Feature 1">Feature 1</div>
+            <div class="feature unselected" name="Feature 1">Feature 2</div>
+            <div class="feature unselected" name="Feature 1">Feature 3</div>
+        </div>
+    </div>
 
-    <label for="volume">🔊 Volume:</label>
-    <input type="range" id="volume" min="0" max="100">
 
-    <button class="save-btn" onclick="chrome.runtime.sendMessage({value: "testing"}, (response) => {});">💾 Save Settings</button>
+    <label for="speed">⚡ Auto Speed:</label>
+    <div class="speed-slider">
+        <span>Slow</span>
+        <input type="range" id="speed" min="1" max="5" step="1" list="speed-steps">
+        <datalist id="speed-steps">
+            <option value="1" label="1"></option>
+            <option value="2" label="2"></option>
+            <option value="3" label="3"></option>
+            <option value="4" label="4"></option>
+            <option value="5" label="5"></option>
+        </datalist>
+        <span>Fast</span>
+    </div>
+
+    <button class="save-btn" id="save-btn">💾 Save Settings</button>
 </div>
 </body>
-
+<script src="settings.js"></script>
 </html>
