Commented out areas that have not been implemented yet.

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -127,15 +127,15 @@
     <!--        <option value="dark">Dark</option>-->
     <!--    </select>-->
 
-    <label>🛠️ Print classes</label>
-    <div class="dropdown">
-        <div id="selected-features">Select Features ▼</div>
-        <div class="dropdown-content selection">
-            <div class="feature unselected" name="Feature 1">Feature 1</div>
-            <div class="feature unselected" name="Feature 1">Feature 2</div>
-            <div class="feature unselected" name="Feature 1">Feature 3</div>
-        </div>
-    </div>
+<!--    <label>🛠️ Print classes</label>-->
+<!--    <div class="dropdown">-->
+<!--        <div id="selected-features">Select Features ▼</div>-->
+<!--        <div class="dropdown-content selection">-->
+<!--            <div class="feature unselected" name="Feature 1">Feature 1</div>-->
+<!--            <div class="feature unselected" name="Feature 1">Feature 2</div>-->
+<!--            <div class="feature unselected" name="Feature 1">Feature 3</div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
     <label for="speed">⚡ Auto Speed:</label>
